--- a/inventory system management - Copy/user.html
+++ b/inventory system management - Copy/user.html
@@ -52,7 +52,7 @@
                 </div>
                     <div class="row">
                     <div class="input-field col s12">
-                        <input type="file"  class=" validate form-control" id="image" placeholder="Upload File" required>
+                        <input type="file"  accept="image/*" class=" validate form-control" id="image" placeholder="Upload File" required>
                     </div>
                   </div><p></p>
     
